// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
<div
  className=""
>
  <img
    alt="image"
    src="https://placehold.it/500x500"
  />
</div>
`;

exports[`it works with styles 1`] = `
.c0 {
  width: 50%;
}

<div
  className="c0"
>
  <img
    alt="image"
    src="https://placehold.it/500x500"
  />
</div>
`;
